# future_sales_prediction

./: .bumpversion.cfg  .gitignore  LICENCE  README.md  config.py  data.dvc  mlruns.dvc  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: publish.yml
docs/: README.md  build_features.md  ci-cd.md  config.md  etl.md  logger.md
notebooks/: dqc_etl.ipynb  dqc_etl_structurised.ipynb  eda.ipynb  feature_engineering.ipynb  modeling.ipynb
src/: config.py  etl.py
src/data/: etl.py  split.py
src/features/: build_features.py
src/fsp_ms/: __init__.py  config.py
src/fsp_ms/data/: etl.py  split.py
src/fsp_ms/features/: build_features.py
src/fsp_ms/fsp_ms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fsp_ms/models/: XGB_model.py
src/fsp_ms/utils/: logger.py
src/fsp_ms/validation/: schema_cleaned.py  scheme_features.py  validator.py
src/future_sales_rimka_lasso/: LICENCE  README.md  pyproject.toml
src/future_sales_rimka_lasso/src/fse_rimka_lasso/: __init__.py  config.py
src/future_sales_rimka_lasso/src/fse_rimka_lasso/features/: build_features.py
src/future_sales_rimka_lasso/src/fse_rimka_lasso/utils/: logger.py
src/future_sales_rimka_lasso/src/fse_rimka_lasso/validation/: validator.py
src/models/: XGB_model.py
src/scripts/: predict.py  run_all.py  train.py
src/utils/: logger.py  run_all.py
src/validation/: schema_cleaned.py  scheme_features.py
