[project]
name = "fsp_ms"
version = "0.2.0"
description = "Project for future sales prediction, data preprocessing, and model training"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "scikit-learn>=1.2,<1.8",
    "pandas>=1.5,<2.3",
    "numpy>=1.21,<2.3",
    "pandera>=0.10.0",
    "tqdm==4.67.1",
    "joblib==1.5.1",
    "xgboost >= 1.6.2",
    "pyarrow<=20.0.0",
    "typing-inspect>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "bump2version>=1.0.1",
    "ipykernel>=6.30.0",
    "mlflow==3.1.1",
    "optuna==4.4.0",
    "matplotlib>=3.1.3",
    "seaborn==0.13.2",
    "plotly==6.2.0",
    "scipy>=1.5.0",
    "shap==0.48.0",
]

[project.urls]
Homepage = "https://github.com/MarianSlassi/future_sales_prediction"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "dvc>=3.61.0",
    "pre-commit>=4.2.0",
]
