[project]
name = "fse_rimka_lasso"
version = "0.1.28"
description = "Project for future sales prediction, data preprocessing, and model training"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "scikit-learn>=1.2,<1.8",
    "pandas>=1.5,<2.3",
    "numpy>=1.21,<2.3",
    "pandera>=0.10.0",
    "tqdm==4.67.1",
    "joblib==1.5.1",
    "xgboost >= 1.6.2",
    "pyarrow<=20.0.0",
    "typing-inspect>=0.6.0"
]

[project.urls]
Homepage = "https://github.com/MarianSlassi/future_sales_prediction"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"